[package]
name = "ifnd"
version = "0.1.0"
authors = ["Liam Oliver-Mallory <liam.olivermallory@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parselnk = "0.1.0"
lnk = "0.2.1"
crossterm = "0.18.0"
fuzzy-matcher = "0.3.7"